--- a/README.adoc
+++ b/README.adoc
@@ -14,7 +14,7 @@
 :x_download_url: https://raw.githubusercontent.com/quinngrier/qtts/main/qtts
 :x_man_page_url: https://github.com/quinngrier/qtts/blob/main/qtts.1.adoc
 
-Qtts is a command-line utility for converting text to speech.
+Qtts is a text-to-speech CLI that wraps various underlying models.
 
 Here's how to get started:
 
@@ -33,8 +33,7 @@ You can check this by running `ffmpeg -version`.
 You can put the script anywhere you like, but the rest of these steps
 will assume that you've put it somewhere in your `PATH`.
 
-. Run `qtts "The source of the huge river is the clear spring."` to
-generate and play the resulting speech through your sound card.
+. Run `qtts "The fox was quick"` to generate and play the result.
 
 . For more advanced usage, see the link:{x_man_page_url}[man page].
 
