--- a/README.adoc
+++ b/README.adoc
@@ -14,8 +14,7 @@
 :x_download_url: https://raw.githubusercontent.com/quinngrier/qtts/main/qtts
 :x_man_page_url: https://github.com/quinngrier/qtts/blob/main/qtts.1.adoc
 
-Qtts is a text-to-speech CLI wrapper that supports various underlying
-models.
+This is Qtts, a text-to-speech CLI wrapper.
 
 Here's how to get started:
 
