--- a/qtts.1.adoc
+++ b/qtts.1.adoc
@@ -18,8 +18,8 @@ ifdef::x_manpage[]
 
 = qtts(1)
 :doctype: manpage
-:manmanual: Qtts
-:mansource: Qtts
+:manmanual: qtts
+:mansource: qtts
 
 endif::[]
 
