--- a/README.adoc
+++ b/README.adoc
@@ -8,13 +8,13 @@
 // <https://creativecommons.org/publicdomain/zero/1.0/>.
 //
 
-= Qtts
+= qtts
 :experimental:
 
 :x_download_url: https://raw.githubusercontent.com/quinngrier/qtts/main/qtts
 :x_man_page_url: https://github.com/quinngrier/qtts/blob/main/qtts.1.adoc
 
-Qtts is a text-to-speech CLI wrapper.
+qtts is a text-to-speech CLI wrapper.
 
 Here's how to get started:
 
