--- a/qtts.1.adoc
+++ b/qtts.1.adoc
@@ -21,16 +21,88 @@ ifdef::x_manpage[]
 :manmanual: qtts
 :mansource: qtts
 
+:x_long_option_1a: pass:n[**--foo=**<__bar__>]
+:x_long_option_1b: pass:n[**--foo**{nbsp}<__bar__>]
+:x_opt_terminator: pass:n[**--**]
+:x_qtts: pass:n[**qtts**]
+:x_qtts_option: pass:n[<__option__>]
+:x_qtts_word: pass:n[<__word__>]
+:x_short_option_1a: pass:n[**-f**{nbsp}<__bar__>]
+:x_short_option_1b: pass:n[**-f**<__bar__>]
+:x_short_option_2a: pass:n[**-f**]
+:x_short_option_2b: pass:n[**-g**]
+:x_short_option_2c: pass:n[**-fg**]
+:x_short_option_2d: pass:n[**-f{nbsp}-g**]
+
 endif::[]
 
 ifndef::x_manpage[]
 
 = `qtts`
 
+:x_long_option_1a: pass:n[``--foo=<bar>``]
+:x_long_option_1b: pass:n[``--foo{nbsp}<bar>``]
+:x_opt_terminator: pass:n[``--``]
+:x_qtts: pass:n[``qtts``]
+:x_qtts_option: pass:n[``<option>``]
+:x_qtts_word: pass:n[``<word>``]
+:x_short_option_1a: pass:n[``-f{nbsp}<bar>``]
+:x_short_option_1b: pass:n[``-f<bar>``]
+:x_short_option_2a: pass:n[``-f``]
+:x_short_option_2b: pass:n[``-g``]
+:x_short_option_2c: pass:n[``-fg``]
+:x_short_option_2d: pass:n[``-f{nbsp}-g``]
+
 endif::[]
 
 :x_subs_normal: attributes,specialchars,quotes,replacements,macros,post_replacements
 :x_subs_source: attributes,specialchars,quotes,macros
+
+== Name
+
+ifdef::x_manpage[]
+qtts - Convert text to speech
+endif::[]
+
+ifndef::x_manpage[]
+{x_qtts} &#x2014; Convert text to speech
+endif::[]
+
+== Synopsis
+
+ifdef::x_manpage[]
+{x_qtts} ++[++{x_qtts_option}++...]++ ++[++{x_qtts_word}++...]++
+endif::[]
+
+ifndef::x_manpage[]
+----
+qtts [<option>...] [<word>...]
+----
+endif::[]
+
+== Description
+
+TODO
+
+== Options
+
+A long option with a required argument {x_long_option_1a} may also be
+written as {x_long_option_1b}.
+A short option with a required argument {x_short_option_1a} may also be
+written as {x_short_option_1b} if the argument is not empty.
+A short option with a forbidden argument {x_short_option_2a} may be
+bundled with a subsequent short option or short option bundle
+{x_short_option_2b} by writing {x_short_option_2c} instead of
+{x_short_option_2d}.
+
+{x_opt_terminator}:: All further arguments will be taken as
+{x_qtts_word}s instead of possibly being taken as {x_qtts_option}s.
+
+== Environment variables
+
+TODO
+
+== Examples
 
 TODO
 
