--- a/qtts.1.adoc
+++ b/qtts.1.adoc
@@ -23,6 +23,12 @@ ifdef::x_manpage[]
 
 :x_long_option_1a: pass:n[**--foo=**<__bar__>]
 :x_long_option_1b: pass:n[**--foo**{nbsp}<__bar__>]
+:x_opt_o_arg: pass:n[<__file__>]
+:x_opt_o_name: pass:n[**-o**]
+:x_opt_o_name_arg: pass:n[**-o**{nbsp}<__file__>]
+:x_opt_output_arg: pass:n[<__file__>]
+:x_opt_output_name: pass:n[**--output**]
+:x_opt_output_name_arg: pass:n[**--output=**<__file__>]
 :x_opt_terminator: pass:n[**--**]
 :x_qtts: pass:n[**qtts**]
 :x_qtts_option: pass:n[<__option__>]
@@ -42,6 +48,12 @@ ifndef::x_manpage[]
 
 :x_long_option_1a: pass:n[``--foo=<bar>``]
 :x_long_option_1b: pass:n[``--foo{nbsp}<bar>``]
+:x_opt_o_arg: pass:n[``<file>``]
+:x_opt_o_name: pass:n[``-o``]
+:x_opt_o_name_arg: pass:n[``-o{nbsp}<file>``]
+:x_opt_output_arg: pass:n[``<file>``]
+:x_opt_output_name: pass:n[``--output``]
+:x_opt_output_name_arg: pass:n[``--output=<file>``]
 :x_opt_terminator: pass:n[``--``]
 :x_qtts: pass:n[``qtts``]
 :x_qtts_option: pass:n[``<option>``]
@@ -97,6 +109,9 @@ bundled with a subsequent short option or short option bundle
 
 {x_opt_terminator}:: All further arguments will be taken as
 {x_qtts_word}s instead of possibly being taken as {x_qtts_option}s.
+
+{x_opt_output_name_arg}, {x_opt_o_name_arg}:: Save the output to
+{x_opt_output_arg} instead of playing it.
 
 == Environment variables
 
