Rename --model <name> to --model <model>

--- a/qtts.1.adoc
+++ b/qtts.1.adoc
@@ -23,12 +23,12 @@ ifdef::x_manpage[]
 
 :x_long_option_1a: pass:n[**--foo=**<__bar__>]
 :x_long_option_1b: pass:n[**--foo**{nbsp}<__bar__>]
-:x_opt_m_arg: pass:n[<__name__>]
+:x_opt_m_arg: pass:n[<__model__>]
 :x_opt_m_name: pass:n[**-m**]
-:x_opt_m_name_arg: pass:n[**-m**{nbsp}<__name__>]
-:x_opt_model_arg: pass:n[<__name__>]
+:x_opt_m_name_arg: pass:n[**-m**{nbsp}<__model__>]
+:x_opt_model_arg: pass:n[<__model__>]
 :x_opt_model_name: pass:n[**--model**]
-:x_opt_model_name_arg: pass:n[**--model=**<__name__>]
+:x_opt_model_name_arg: pass:n[**--model=**<__model__>]
 :x_opt_o_arg: pass:n[<__file__>]
 :x_opt_o_name: pass:n[**-o**]
 :x_opt_o_name_arg: pass:n[**-o**{nbsp}<__file__>]
@@ -60,12 +60,12 @@ ifndef::x_manpage[]
 
 :x_long_option_1a: pass:n[``--foo=<bar>``]
 :x_long_option_1b: pass:n[``--foo{nbsp}<bar>``]
-:x_opt_m_arg: pass:n[``<name>``]
+:x_opt_m_arg: pass:n[``<model>``]
 :x_opt_m_name: pass:n[``-m``]
-:x_opt_m_name_arg: pass:n[``-m{nbsp}<name>``]
-:x_opt_model_arg: pass:n[``<name>``]
+:x_opt_m_name_arg: pass:n[``-m{nbsp}<model>``]
+:x_opt_model_arg: pass:n[``<model>``]
 :x_opt_model_name: pass:n[``--model``]
-:x_opt_model_name_arg: pass:n[``--model=<name>``]
+:x_opt_model_name_arg: pass:n[``--model=<model>``]
 :x_opt_o_arg: pass:n[``<file>``]
 :x_opt_o_name: pass:n[``-o``]
 :x_opt_o_name_arg: pass:n[``-o{nbsp}<file>``]
