--- a/qtts.1.adoc
+++ b/qtts.1.adoc
@@ -134,8 +134,8 @@ bundled with a subsequent short option or short option bundle
 {x_opt_terminator}:: All further arguments will be taken as
 {x_qtts_word}s instead of possibly being taken as {x_qtts_option}s.
 
-{x_opt_model_name_arg}, {x_opt_m_name_arg}:: Use the specified model
-instead of automatically picking an model.
+{x_opt_model_name_arg}, {x_opt_m_name_arg}:: Use {x_opt_model_arg}
+instead of the default model.
 
 {x_opt_output_name_arg}, {x_opt_o_name_arg}:: Save the output to
 {x_opt_output_arg} instead of playing it.
